--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="index2.css">
 		<title>OH were</title>
 	</head>
 	<body>
